--- a/workspace-ins/ch12-app/todolist/05-router/src/App.css
+++ b/workspace-ins/ch12-app/todolist/05-router/src/App.css
@@ -259,7 +259,7 @@ footer {
     }
 
     /* 삭제버튼 */
-    a:last-of-type {
+    button:last-of-type {
       position: relative;
       display: flex;
       gap: 0.25rem;
