--- a/workspace-ins/ch12-app/todolist/05-router/src/App.css
+++ b/workspace-ins/ch12-app/todolist/05-router/src/App.css
@@ -441,3 +441,13 @@ footer {
     transform: none;
   }
 }
+
+/* input - errormessage */
+.input-error {
+  grid-column: 1/-1;
+  font-weight: 500;
+  color: rgb(218, 0, 0);
+  &::before {
+    content: "🚨";
+  }
+}
