--- a/workspace/ch12-app/todolist/05-router/src/App.css
+++ b/workspace/ch12-app/todolist/05-router/src/App.css
@@ -1,32 +1,54 @@
-.todoapp {
-  background-color: aqua;
+/* ============================
+        기본스타일
+============================ */
+:root {
+  /* 설정과 무관하게 라이트테마 쓰고 싶으시면 아래 주석처리 */
+  color-scheme: light dark;
+
+  /* 아래 두개로 주조색 변경 가능 */
+  --light-primary-color: #667ecc;
+  --light-primary-dark-color: #4056a1;
+
+  --light-bg-color: #fff;
+  --dark-grey: #666;
+
+  --light-text-color: #222;
+  --light-border-color: #dee2e6;
 }
 
-.menu {
-  background-color: beige;
+@media (prefers-color-scheme: dark) {
+  :root {
+    --dark-primary-color: #8fa5ff;
+    --dark-primary-dark-color: #667ecc;
+
+    --dark-bg-color: #1e1e2f;
+    --dark-text-color: #e6e6e6;
+    --dark-border-color: #444c5e;
+    --dark-grey: #2a2a3b;
+  }
 }
 
-.menu-dark {
-  background-color: gray;
-}
-
-/* tt */
 body {
   margin: 0;
   padding: 0;
+  background: light-dark(var(--light-bg-color), var(--dark-bg-color));
+  color: light-dark(var(--light-text-color), var(--dark-text-color));
 }
 
 body * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  color: #222;
 }
 
 a {
   display: inline-block;
   text-decoration: none;
   color: inherit;
+}
+
+br {
+  display: none;
 }
 
 ul,
@@ -36,28 +58,38 @@ li {
 
 input,
 textarea {
-  background: #fff;
+  background: var(--light-bg-color);
   padding: 0.5rem 1rem;
-  border: 1px solid #dee2e6;
+  border: 1px solid var(--light-border-color, #dee2e6);
   border-radius: 0.5rem;
   transition: all 0.3s;
   outline: none;
+  color: #999;
+
+  &:placeholder-shown {
+    color: inherit;
+  }
 
   &:focus {
-    color: #667ecc;
-    background: #d5dfff6e;
-    border-color: rgba(130, 151, 219, 0.506);
+    color: var(--light-primary-color, #667ecc);
+    background: #edf1ff;
+    border-color: rgb(177, 195, 255);
   }
 }
 
 /* ============================
         [Common]
 ============================ */
+
 #root {
   max-width: 768px;
   margin: 0 auto;
 }
 
+#main {
+  min-height: 200px;
+  /* background: yellow; */
+}
 /* ============================
         [Header]
 ============================ */
@@ -68,28 +100,43 @@ header {
   align-items: center;
   gap: 1rem;
 
-  box-shadow: 1px 1px 6px #bdbdbd60;
+  box-shadow: 1px 1px 6px #c9c9c9;
 
   h1 {
-    color: #667ecc;
+    display: inline-block;
+    color: var(--light-primary-color, #667ecc);
+
+    @media (max-width: 500px) {
+      font-size: 1.25rem;
+    }
   }
 
   ul {
     display: flex;
     gap: 0.5rem;
+
+    @media (max-width: 500px) {
+      gap: 0.25rem;
+    }
+
     .menu,
     .menu-dark {
       position: relative;
       padding: 0.25rem 1rem 0.5rem;
       background: transparent;
       font-weight: 500;
-      color: #222;
+      color: light-dark(var(--light-text-color), var(--dark-text-color));
+
+      @media (max-width: 500px) {
+        font-size: 0.875rem;
+        padding: 0.25rem 0.75rem 0.5rem;
+      }
     }
 
     .menu:hover,
     .menu-dark {
       font-weight: 600;
-      color: #667ecc;
+      color: var(--light-primary-color, #667ecc);
     }
 
     .menu::after,
@@ -101,7 +148,7 @@ header {
       transform: translateX(-50%);
       height: 2px;
       width: 0;
-      background-color: #667ecc;
+      background-color: var(--light-primary-color, #667ecc);
       transition: width 0.3s;
     }
 
@@ -119,8 +166,7 @@ footer {
   width: 100%;
   height: 80px;
   padding: 1rem;
-  margin-top: 1rem;
-  background: #f0f0f075;
+  background: light-dark(#f8f8f8, rgb(27, 27, 32));
 
   display: flex;
   align-items: center;
@@ -128,20 +174,60 @@ footer {
 
   p {
     text-align: center;
-    font-size: 0.875rem;
-    color: #666;
+    font-size: 0.75rem;
+    color: var(--dark-grey, #666);
+    color: light-dark(var(--dark-grey), var(--white));
+
+    &::after {
+      display: none;
+      margin-top: 0.25rem;
+      content: "Design by Seonyoung🍀";
+
+      @media (max-width: 600px) {
+        display: block;
+      }
+    }
   }
 }
 
 /* ============================
         [Layout]
 ============================ */
+.todoapp > div:has(h2:nth-of-type(2)) {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 1rem;
+
+  @media (max-width: 770px) {
+    display: block;
+  }
+}
+
 .todoapp > div {
-  padding: 2rem 1rem;
+  padding: 2rem 0;
+  position: relative;
+
+  @media (max-width: 770px) {
+    padding: 2rem 1rem;
+  }
+}
+
+.todoapp > div > h2:first-of-type,
+.todoapp > div > .todo:first-of-type {
+  grid-column: 1/2;
 }
 
 .todoapp > div > h2:not(:first-of-type) {
-  margin-top: 1rem;
+  grid-column: 2/3;
+  grid-row: 1/2;
+
+  @media (max-width: 770px) {
+    margin-top: 1rem;
+  }
+}
+
+.todoapp > div > .todo:not(:first-of-type) {
+  grid-column: 2/3;
 }
 
 /* todolist */
@@ -149,15 +235,17 @@ footer {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
+  margin-top: 1.25rem;
 
   li {
-    display: flex;
+    display: grid;
+    grid-template-columns: auto 1fr auto;
     align-items: center;
     justify-content: space-between;
-    gap: 0.5rem;
+    gap: 0.75rem;
     padding: 0.5rem 1rem;
     font-size: 0.875rem;
-    background: #f0f0f075;
+    background: light-dark(#f8f8f8, rgb(122, 122, 150));
     border-radius: 0.5rem;
     box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
 
@@ -165,27 +253,34 @@ footer {
     span + a:hover {
       text-decoration: 1px underline currentColor;
     }
+    a {
+      word-break: break-all;
+      overflow: hidden;
+    }
 
     /* 삭제버튼 */
-    a:last-of-type {
+    button:last-of-type {
       position: relative;
       display: flex;
       gap: 0.25rem;
       align-items: center;
       padding: 0.25rem 1rem;
-      background: #fff;
-      border: 1px solid #dee2e6;
+      background: var(--light-bg-color, #fff);
+      border: 1px solid var(--light-border-color, #dee2e6);
       border-radius: 0.875rem;
       transition: all 0.3s;
-      color: #666;
+      color: var(--dark-grey, #666);
 
       &::before {
         content: "🗑️";
         display: inline-block;
         font-size: 0.75rem;
       }
+
       &:hover {
-        background: #e6e6e6;
+        background: var(--dark-grey);
+        border: 1px solid var(--dark-grey);
+        color: var(--light-bg-color);
       }
     }
   }
@@ -206,49 +301,66 @@ footer {
   button {
     position: relative;
     padding: 0.375rem 1rem;
-    background: #667ecc;
-    color: #fff;
+    background: var(--light-primary-color, #667ecc);
+    color: var(--light-bg-color, #fff);
     border: none;
     border-radius: 0.875rem;
     cursor: pointer;
+    transform: none;
     transition: background 0.3s;
 
     &:hover {
-      background: #4056a1;
+      background: var(--light-primary-dark-color, #4056a1);
     }
-  }
-}
-
-/* 추가버튼 */
-.todo > a {
-  display: inline-flex;
-  padding: 0.25rem 1rem;
-  width: fit-content;
-  background: #fff;
-  font-size: 0.875rem;
-  border: 1px solid #dee2e6;
-  border-radius: 0.875rem;
-  transition: all 0.3s;
-
-  &:not(:first-of-type) {
-    margin-left: 0.5rem;
-  }
-
-  &:hover {
-    background: #666;
-    color: #fff;
   }
 }
 
 /* todo */
 .todo {
-  padding: 1rem;
-  margin-top: 0.5rem;
-  background: #fff;
-  border: 1px solid #dee2e6;
+  padding: 1.25rem 1rem;
+  margin-top: 0.75rem;
+  background: light-dark(var(--light-bg-color), var(--dark-bg-color));
+  border: 1px solid var(--light-border-color, light-dark(var(--light-border-color), var(--dark-border-color)));
+  border-radius: 0.5rem;
 
   p {
-    color: #665;
+    color: light-dark(var(--dark-grey), var(--dark-text-color));
+  }
+}
+
+/* 추가버튼 */
+.todo > a {
+  position: absolute;
+  top: 2.375rem;
+  right: 0;
+
+  display: inline-flex;
+  padding: 0.25rem 1rem;
+  width: fit-content;
+  background: var(--light-primary-color, #667ecc);
+  color: var(--light-bg-color, #fff);
+  font-size: 0.875rem;
+  border-radius: 0.875rem;
+  transition: all 0.3s;
+
+  &:hover {
+    background: var(--light-primary-dark-color, #4056a1);
+  }
+
+  @media (max-width: 500px) {
+    right: 1rem;
+  }
+}
+
+.todo > a + a {
+  transform: translateX(calc(-100% - 0.25rem));
+  color: light-dark(var(--light-text-color), var(--dark-text-color));
+  background: light-dark(var(--light-bg-color), var(--dark-bg-color));
+  border: 1px solid var(--light-border-color, #dee2e6);
+
+  &:hover {
+    background: var(--dark-grey, #666);
+    color: var(--light-bg-color, #fff);
   }
 }
 
@@ -269,13 +381,10 @@ footer {
   justify-content: space-between;
   padding-bottom: 3rem;
 
-  br {
-    display: none;
-  }
-
   input,
   textarea {
     width: 100%;
+    font-family: "맑은고딕", sans-serif;
   }
 
   input[type="checkbox"] {
@@ -285,47 +394,60 @@ footer {
   button {
     position: absolute;
     bottom: 0;
-    left: 0;
+    /* left: 0; */
+    right: 0;
+    transform: translateX(calc(-100% - 0.5rem));
 
     padding: 0.375rem 1rem;
-    background: #667ecc;
-    color: #fff;
+    background: var(--light-primary-color, #667ecc);
+    color: var(--light-bg-color, #fff);
     border: none;
     border-radius: 0.875rem;
     cursor: pointer;
     transition: background 0.3s;
 
     &:hover {
-      background: #4056a1;
+      background: var(--light-primary-dark-color, #4056a1);
     }
   }
 
   a {
     position: absolute;
     bottom: 0;
-    left: 0.25rem;
-    transform: translateX(100%);
+    right: 0;
+    transform: translateX(calc(-100% - 0.375rem));
 
     display: inline-flex;
     padding: 0.25rem 1rem;
     width: fit-content;
-    background: #fff;
+    background: var(--light-bg-color, #fff);
+    color: var(--light-text-color);
     font-size: 0.875rem;
-    border: 1px solid #dee2e6;
+    border: 1px solid var(--light-border-color, #dee2e6);
     border-radius: 0.875rem;
     transition: all 0.3s;
 
-    &:not(:first-of-type) {
-      margin-left: 0.5rem;
-    }
-
     &:hover {
-      background: #666;
-      color: #fff;
+      background: var(--dark-grey, #666);
+      color: var(--light-bg-color, #fff);
     }
   }
 
+  button + a {
+    transform: none;
+  }
+
   a + a {
-    transform: translateX(200%);
+    transform: none;
+  }
+}
+
+/* input - errormessage */
+.input-error {
+  grid-column: 1/-1;
+  font-weight: 500;
+  color: rgb(218, 0, 0);
+  &::before {
+    content: "🚨";
   }
 }
